--- a/index.html
+++ b/index.html
@@ -1,13 +1,212 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Empresa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <style>
+        body {
+            background: linear-gradient(to bottom, #000428, #004e92);
+            color: white;
+        }
+        .full-screen {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+        }
+        .card {
+            background: transparent;
+            border: 2px solid white;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.2);
+            color: white;
+            transition: transform 0.3s ease-in-out;
+        }
+        .card:hover {
+            transform: scale(1.1);
+            box-shadow: 0px 6px 20px rgba(255, 255, 255, 0.4);
+        }
+        .team-card img {
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+        }
+        .btn-custom {
+            background: linear-gradient(to right, #004e92, #001f3f);
+            color: white;
+            padding: 12px 25px;
+            border-radius: 30px;
+            font-weight: bold;
+            transition: 0.3s;
+            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.3);
+            border: 2px solid white;
+        }
+        .btn-custom:hover {
+            background: linear-gradient(to right, #001f3f, #000428);
+            color: white;
+            transform: scale(1.1);
+        }
+        .hr-gradient {
+            height: 5px;
+            background: linear-gradient(to right, transparent, white, transparent);
+            border: none;
+            margin: 50px 0;
+        }
+    </style>
 </head>
 <body>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
+            <a class="navbar-brand fs-3" href="#">Empresa</a>
+            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></button>
+            <div class="collapse navbar-collapse" id="collapsibleNavId">
+                <ul class="navbar-nav m-auto fs-4">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" aria-current="page"><i class="fa-solid fa-house"></i> Inicio <span class="visually-hidden">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-sitemap"></i> Organizacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-blog"></i> Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-shop"></i> Productos</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav fs-4">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa-solid fa-user"></i> Usuario</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownId">
+                            <a class="dropdown-item" href="#"><i class="fa-solid fa-person"></i> Perfil</a>
+                            <a class="dropdown-item" href="#"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
+                            <a class="dropdown-item" href="#"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <header class="full-screen">
+        <h1 style="font-size: 4rem;"><i class="fa-solid fa-building"></i> Bienvenidos a Nuestra Empresa</h1>
+        <p class="mt-3">Ofrecemos soluciones innovadoras para tu negocio</p>
+        <a href="#mas-info" class="btn btn-custom mt-3"><i class="fa-solid fa-arrow-right"></i> Más Información</a>
+    </header>
+
+    <hr class="hr-gradient">
+
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>¿Quiénes Somos?</h2>
+            </div>
+            <div class="col-md-12">
+                <p class="mt-3">Somos una empresa dedicada a ofrecer soluciones empresariales innovadoras. Nuestro equipo está compuesto por profesionales altamente capacitados que trabajan día a día para garantizar la mejor calidad en nuestros servicios.</p>
+            </div>
+        </div>
+        <div class="row text-center mt-4">
+            <div class="col-md-12 mb-5"><h2>¿Qué Hacemos?</h2></div>
+            <div class="col-md-3">
+                <div class="card p-3">
+                    <div class="card-header">
+                        <h5><i class="fa-solid fa-laptop-code"></i> Desarrollo Web</h5>
+                    </div>
+                    <p class="card-body">Creación de sitios web modernos y funcionales.</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card p-3">
+                    <div class="card-header">
+                        <h5><i class="fa-solid fa-chart-line"></i> Marketing Digital</h5>
+                    </div>
+                    <p class="card-body">Estrategias para aumentar la visibilidad online.</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card p-3">
+                    <div class="card-header">
+                        <h5><i class="fa-solid fa-bullhorn"></i> Publicidad</h5>
+                    </div>
+                    <p class="card-body">Campañas personalizadas para tu empresa.</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card p-3">
+                    <div class="card-header">
+                        <h5><i class="fa-solid fa-users"></i> Consultoría</h5>
+                    </div>
+                    <p class="card-body">Asesoría para optimizar tus procesos de negocio.</p>
+                </div>
+            </div>
+        </div>
+
+        <hr class="hr-gradient">
+
+        <h2 class="text-center">Trabajos Disponibles</h2>
+        <ul class="list-group mt-4">
+            <li class="list-group-item bg-transparent text-white"><i class="fa-solid fa-briefcase"></i> Desarrollador Web - Creación y mantenimiento de sitios web.</li>
+            <li class="list-group-item bg-transparent text-white"><i class="fa-solid fa-briefcase"></i> Especialista en Marketing - Estrategias de crecimiento digital.</li>
+            <li class="list-group-item bg-transparent text-white"><i class="fa-solid fa-briefcase"></i> Diseñador Gráfico - Creación de contenido visual atractivo.</li>
+            <li class="list-group-item bg-transparent text-white"><i class="fa-solid fa-briefcase"></i> Consultor Empresarial - Optimización de procesos.</li>
+        </ul>
+
+        <hr class="hr-gradient">
+
+        <div class="row text-center">
+            <div class="col-md-12 text-center mb-5">
+                <h2 class="text-center">Nuestro equipo</h2>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="https://images.unsplash.com/photo-1561154464-82e9adf32764?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" class="card-img-top img-thumbnail img-fluid rounded-circle" style=" width: 100px; height: 100px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2"><i class="fa-solid fa-user-tag"></i> Nombre persona</h6>
+                        <p class="card-text"><i class="fa-solid fa-circle-info"></i> Informacion de la persona, que realiza en la empresa</p>
+                    </div>
+                    <div class="card-footer">
+                        <i class="fa-solid fa-briefcase"></i> Cargo que ejerce
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="https://images.unsplash.com/photo-1561154464-82e9adf32764?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" class="card-img-top img-thumbnail img-fluid rounded-circle" style=" width: 100px; height: 100px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2"><i class="fa-solid fa-user-tag"></i> Nombre persona</h6>
+                        <p class="card-text"><i class="fa-solid fa-circle-info"></i> Informacion de la persona, que realiza en la empresa</p>
+                    </div>
+                    <div class="card-footer">
+                        <i class="fa-solid fa-briefcase"></i> Cargo que ejerce
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="https://images.unsplash.com/photo-1561154464-82e9adf32764?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" class="card-img-top img-thumbnail img-fluid rounded-circle" style=" width: 100px; height: 100px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2"><i class="fa-solid fa-user-tag"></i> Nombre persona</h6>
+                        <p class="card-text"><i class="fa-solid fa-circle-info"></i> Informacion de la persona, que realiza en la empresa</p>
+                    </div>
+                    <div class="card-footer">
+                        <i class="fa-solid fa-briefcase"></i> Cargo que ejerce
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
