Avance de proyecto

--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav m-auto fs-4">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page"><i class="fa-solid fa-house"></i> Inicio <span class="visually-hidden">(current)</span></a>
+                        <a class="nav-link active ms-4" href="#" aria-current="page"><i class="fa-solid fa-house"></i> Inicio <span class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-sitemap"></i> Organizacion</a>
+                        <a class="nav-link ms-4" href="#"><i class="fa-solid fa-sitemap"></i> Organizacion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-blog"></i> Blog</a>
+                        <a class="nav-link ms-4" href="#"><i class="fa-solid fa-blog"></i> Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-shop"></i> Productos</a>
+                        <a class="nav-link ms-4" href="#"><i class="fa-solid fa-shop"></i> Productos</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav fs-4">
